--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ cloudinary.api-key=129216924887731
 cloudinary.api-secret=kzImAroivRAKixaSgU__grkj0AA
 cloudinary.cloud-name=dv6ktrxwv
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.password=1
-spring.datasource.url=jdbc:mysql://localhost:3306/hobbie_backend_db?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Paris
+spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/travel?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=create
