--- a/src/main/resources/application.dev.properties
+++ b/src/main/resources/application.dev.properties
@@ -1,15 +1,10 @@
 cloudinary.api-key=129216924887731
 cloudinary.api-secret=kzImAroivRAKixaSgU__grkj0AA
 cloudinary.cloud-name=dv6ktrxwv
-
-
-#Because of bug, it has been configured from MyDataSourceConfig.java
-
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.password=
-spring.datasource.url=${DB_URL}
-spring.datasource.username=root
-
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.password=
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.use-new-id-generator-mappings=false
